--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
         "php": "^8.1",
         "anhskohbo/no-captcha": "^3.6",
         "barryvdh/laravel-dompdf": "^2.2",
-        "guzzlehttp/guzzle": "^7.2",
+        "guzzlehttp/guzzle": "^7.9",
         "laravel/fortify": "*",
         "laravel/framework": "^10.10",
         "laravel/jetstream": "^3.2",
@@ -16,6 +16,8 @@
         "laravel/tinker": "^2.8",
         "laravel/ui": "^4.2",
         "mews/captcha": "^3.4",
+        "openai-php/client": "^0.10.1",
+        "openai-php/laravel": "^0.10.1",
         "staudenmeir/eloquent-eager-limit": "^1.8"
     },
     "require-dev": {
