--- a/.env
+++ b/.env
@@ -1,26 +1,26 @@
 APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:vw/2RCxKWRyEMJ6PbpM2XdGaFDntnRKIpP7y36sNG6o=
-APP_DEBUG=false
+APP_DEBUG=true
 APP_URL=http://localhost
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-# DB_CONNECTION=mysql
-# DB_HOST=127.0.0.1
-# DB_PORT=3306
-# DB_DATABASE=mm_db
-# DB_USERNAME=root
-# DB_PASSWORD=
-
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=u510162695_mm_db
-DB_USERNAME=u510162695_mm_db_root
-DB_PASSWORD=1Mm_db_root
+DB_DATABASE=mm_db
+DB_USERNAME=root
+DB_PASSWORD=
+
+# DB_CONNECTION=mysql
+# DB_HOST=127.0.0.1
+# DB_PORT=3306
+# DB_DATABASE=u510162695_mm_db
+# DB_USERNAME=u510162695_mm_db_root
+# DB_PASSWORD=1Mm_db_root
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -71,4 +71,4 @@ VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
-# OPENAI_API_KEY=sk-KSVK1J3I9UoVAhix2Xxn6Y_7sC6OQSPnWBAb5ht4U6T3BlbkFJQgjDouvC-HicVKf4AhDyMH3-Go-RJS9xGhTfgmwgMA
+OPENAI_API_KEY=sk-KSVK1J3I9UoVAhix2Xxn6Y_7sC6OQSPnWBAb5ht4U6T3BlbkFJQgjDouvC-HicVKf4AhDyMH3-Go-RJS9xGhTfgmwgMA
