--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:vw/2RCxKWRyEMJ6PbpM2XdGaFDntnRKIpP7y36sNG6o=
-APP_DEBUG=false
+APP_DEBUG=true
 APP_URL=http://localhost
 
 LOG_CHANNEL=stack
@@ -28,6 +28,7 @@ FILESYSTEM_DISK=local
 QUEUE_CONNECTION=sync
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
+SESSION_SECURE_COOKIE=true
 
 MEMCACHED_HOST=127.0.0.1
 
@@ -69,3 +70,5 @@ VITE_PUSHER_HOST="${PUSHER_HOST}"
 VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+OPENAI_API_KEY=sk-KSVK1J3I9UoVAhix2Xxn6Y_7sC6OQSPnWBAb5ht4U6T3BlbkFJQgjDouvC-HicVKf4AhDyMH3-Go-RJS9xGhTfgmwgMA
