--- a/.env
+++ b/.env
@@ -71,4 +71,4 @@ VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
-OPENAI_API_KEY=sk-KSVK1J3I9UoVAhix2Xxn6Y_7sC6OQSPnWBAb5ht4U6T3BlbkFJQgjDouvC-HicVKf4AhDyMH3-Go-RJS9xGhTfgmwgMA
+OPENAI_API_KEY="sk-KSVK1J3I9UoVAhix2Xxn6Y_7sC6OQSPnWBAb5ht4U6T3BlbkFJQgjDouvC-HicVKf4AhDyMH3-Go-RJS9xGhTfgmwgMA"
