--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     },
     "dependencies": {
         "chartjs-adapter-date-fns": "^3.0.0",
-        "chartjs-adapter-moment": "^1.0.1"
+        "chartjs-adapter-moment": "^1.0.1",
+        "node-fetch": "^3.3.2"
     }
 }
