--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:vw/2RCxKWRyEMJ6PbpM2XdGaFDntnRKIpP7y36sNG6o=
 APP_DEBUG=false
-APP_URL=http://localhost
+APP_URL=http:https://mm-app-v2.com
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
@@ -40,10 +40,10 @@ REDIS_PORT=6379
 MAIL_MAILER=smtp
 MAIL_HOST=smtp.gmail.com
 MAIL_PORT=587  # or 465 if you prefer SSL
-MAIL_USERNAME=nelbanbetache@gmail.com
-MAIL_PASSWORD=bncmawqvytcarzgw
+MAIL_USERNAME=nelban.betache18@gmail.com
+MAIL_PASSWORD=dkbffagdjrrxglvf
 MAIL_ENCRYPTION=tls  # or 'ssl' if using port 465
-MAIL_FROM_ADDRESS=nelbanbetache@gmail.com
+MAIL_FROM_ADDRESS=nelban.betache18@gmail.com
 MAIL_FROM_NAME="${APP_NAME}"
 
 NOCAPTCHA_SITEKEY=6Lc0Zk8qAAAAAJyrbJm8kTI-USRHiDiwCzgMz_2B
