--- a/.env
+++ b/.env
@@ -8,19 +8,19 @@ LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
+# DB_CONNECTION=mysql
+# DB_HOST=127.0.0.1
+# DB_PORT=3306
+# DB_DATABASE=mm_db
+# DB_USERNAME=root
+# DB_PASSWORD=
+
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=mm_db
-DB_USERNAME=root
-DB_PASSWORD=
-
-#DB_CONNECTION=mysql
-#DB_HOST=127.0.0.1
-#DB_PORT=3306
-#DB_DATABASE=u510162695_mm_db
-#DB_USERNAME=u510162695_mm_db_root
-#DB_PASSWORD=1Mm_db_root
+DB_DATABASE=u510162695_mm_db
+DB_USERNAME=u510162695_mm_db_root
+DB_PASSWORD=1Mm_db_root
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
