--- a/.env
+++ b/.env
@@ -40,10 +40,10 @@ REDIS_PORT=6379
 MAIL_MAILER=smtp
 MAIL_HOST=smtp.gmail.com
 MAIL_PORT=587  # or 465 if you prefer SSL
-MAIL_USERNAME=nelban.betache18@gmail.com
-MAIL_PASSWORD=dkbffagdjrrxglvf
+MAIL_USERNAME=nelbanbetache@gmail.com
+MAIL_PASSWORD=djqweymlggfdeoty
 MAIL_ENCRYPTION=tls  # or 'ssl' if using port 465
-MAIL_FROM_ADDRESS=nelban.betache18@gmail.com
+MAIL_FROM_ADDRESS=nelbanbetache@gmail.com
 MAIL_FROM_NAME="${APP_NAME}"
 
 NOCAPTCHA_SITEKEY=6Lc0Zk8qAAAAAJyrbJm8kTI-USRHiDiwCzgMz_2B
