--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:vw/2RCxKWRyEMJ6PbpM2XdGaFDntnRKIpP7y36sNG6o=
 APP_DEBUG=false
-APP_URL=http:https://mm-app-v2.com
+APP_URL=http://localhost
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
@@ -40,15 +40,11 @@ REDIS_PORT=6379
 MAIL_MAILER=smtp
 MAIL_HOST=smtp.gmail.com
 MAIL_PORT=587  # or 465 if you prefer SSL
-MAIL_USERNAME=nelbanbetache@gmail.com
-MAIL_PASSWORD=djqweymlggfdeoty
+MAIL_USERNAME=nelban.betache18@gmail.com
+MAIL_PASSWORD=ymxidkusmsmtmnrx
 MAIL_ENCRYPTION=tls  # or 'ssl' if using port 465
-MAIL_FROM_ADDRESS=nelbanbetache@gmail.com
+MAIL_FROM_ADDRESS=nelban.betache18@gmail.com
 MAIL_FROM_NAME="${APP_NAME}"
-
-NOCAPTCHA_SITEKEY=6Lc0Zk8qAAAAAJyrbJm8kTI-USRHiDiwCzgMz_2B
-NOCAPTCHA_SECRET=6Lc0Zk8qAAAAAGH94qPkICWfVcdDb2Ak5TZCROtM
-
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
@@ -70,6 +66,3 @@ VITE_PUSHER_HOST="${PUSHER_HOST}"
 VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
-
-OPENAI_API_KEY=sk-pZWboDGIN4Q7gheCgKoror7vGUkZTUQGVJ2pYD1HNJT3BlbkFJNiiktD17_dmxdsQKaqtFq6HApkZv_CNxoGq82KbcQA
-OPENAI_ORGANIZATION=org-szUpSNGwAsxAVmp4mhoOAccM
