--- a/.env
+++ b/.env
@@ -2,8 +2,7 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:vw/2RCxKWRyEMJ6PbpM2XdGaFDntnRKIpP7y36sNG6o=
 APP_DEBUG=false
-APP_URL=http://localhost
-
+APP_URL=https://mm-app-v2.com/
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
@@ -21,6 +20,9 @@ DB_PORT=3306
 DB_DATABASE=u510162695_mm_db
 DB_USERNAME=u510162695_mm_db_root
 DB_PASSWORD=1Mm_db_root
+
+RECAPTCHA_SITE_KEY=6LfihnEqAAAAAIet5IRVAvaodeObJryzsQPqLAMk
+RECAPTCHA_SECRET_KEY=6LfihnEqAAAAAHc7vvV02T-Hw43DtRfNwQb86LyU
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
