--- a/.htaccess
+++ b/.htaccess
@@ -10,28 +10,16 @@ RewriteRule ^(.*)$ /public/$1
 RewriteRule ^(/)?$ public/index.php [L]
 </IfModule>
 
-
-
 <IfModule mod_headers.c>
-    # Content Security Policy (adjust as necessary)
     Header set Content-Security-Policy "default-src 'self'; 
-        script-src 'self' 'unsafe-inline' https://www.google.com https://www.gstatic.com https://cdnjs.cloudflare.com https://use.fontawesome.com; 
+        script-src 'self' 'unsafe-inline' 'unsafe-eval' https://www.google.com https://www.gstatic.com https://cdnjs.cloudflare.com https://fonts.googleapis.com https://use.fontawesome.com; 
         style-src 'self' 'unsafe-inline' https://fonts.googleapis.com https://use.fontawesome.com; 
         font-src 'self' https://fonts.gstatic.com https://use.fontawesome.com; 
         img-src 'self' data: https://www.google.com https://www.gstatic.com https://cdnjs.cloudflare.com;"
 
-    # HTTP Strict Transport Security (HSTS)
     Header always set Strict-Transport-Security "max-age=31536000; includeSubDomains"
-
-    # Prevent MIME type sniffing
     Header set X-Content-Type-Options "nosniff"
-
-    # Prevent clickjacking
-    Header set X-Frame-Options "DENY"
-
-    # XSS Protection
+    Header set X-Frame-Options "SAMEORIGIN"
     Header set X-XSS-Protection "1; mode=block"
-
-    # Referrer Policy
     Header set Referrer-Policy "no-referrer"
 </IfModule>
