--- a/.htaccess
+++ b/.htaccess
@@ -11,11 +11,11 @@ RewriteRule ^(/)?$ public/index.php [L]
 </IfModule>
 
 <IfModule mod_headers.c>
-    Header set Content-Security-Policy "default-src 'self'; 
-        script-src 'self' 'unsafe-inline' 'unsafe-eval' https://www.google.com https://www.gstatic.com https://cdnjs.cloudflare.com https://fonts.googleapis.com https://use.fontawesome.com; 
-        style-src 'self' 'unsafe-inline' https://fonts.googleapis.com https://use.fontawesome.com; 
-        font-src 'self' https://fonts.gstatic.com https://use.fontawesome.com; 
-        img-src 'self' data: https://www.google.com https://www.gstatic.com https://cdnjs.cloudflare.com;"
+    #Header set Content-Security-Policy "default-src 'self'; 
+      #  script-src 'self' 'unsafe-inline' 'unsafe-eval' https://www.google.com https://www.gstatic.com https://cdnjs.cloudflare.com https://fonts.googleapis.com https://use.fontawesome.com; 
+      #  style-src 'self' 'unsafe-inline' https://fonts.googleapis.com https://use.fontawesome.com; 
+      #  font-src 'self' https://fonts.gstatic.com https://use.fontawesome.com; 
+      #  img-src 'self' data: https://www.google.com https://www.gstatic.com https://cdnjs.cloudflare.com;"
 
     Header always set Strict-Transport-Security "max-age=31536000; includeSubDomains"
     Header set X-Content-Type-Options "nosniff"
