--- a/public/.htaccess
+++ b/public/.htaccess
@@ -19,3 +19,21 @@
     RewriteCond %{REQUEST_FILENAME} !-f
     RewriteRule ^ index.php [L]
 </IfModule>
+
+<IfModule mod_headers.c>
+    Header set Content-Security-Policy "
+        default-src 'self';
+        script-src 'self' https://www.google.com https://www.gstatic.com https://cdnjs.cloudflare.com https://fonts.googleapis.com https://use.fontawesome.com;
+        style-src 'self' https://fonts.googleapis.com https://use.fontawesome.com;
+        font-src 'self' https://fonts.gstatic.com https://use.fontawesome.com;
+        img-src 'self' data: https://www.google.com https://www.gstatic.com https://cdnjs.cloudflare.com;
+        object-src 'none';  # Disallow all plugins
+        base-uri 'self';    # Only allow the same origin
+    "
+
+    Header always set Strict-Transport-Security "max-age=31536000; includeSubDomains"
+    Header set X-Content-Type-Options "nosniff"
+    Header set X-Frame-Options "SAMEORIGIN"
+    Header set X-XSS-Protection "1; mode=block"
+    Header set Referrer-Policy "no-referrer"
+</IfModule>
