--- a/.env
+++ b/.env
@@ -24,6 +24,8 @@ DB_PASSWORD=1Mm_db_root
 RECAPTCHA_SITE_KEY=6LebinEqAAAAAMTRuf4oOLNuDKQtSKisF41--7uP
 RECAPTCHA_SECRET_KEY=6LebinEqAAAAAKjyn8hpBUzIcbJ4XUjpija8de-x
 
+HCAPTCHA_SITE_KEY=ES_a59227b822854ac48c864713dd5d3a8a
+
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 FILESYSTEM_DISK=local
