--- a/.env
+++ b/.env
@@ -21,8 +21,8 @@ DB_DATABASE=u510162695_mm_db
 DB_USERNAME=u510162695_mm_db_root
 DB_PASSWORD=1Mm_db_root
 
-RECAPTCHA_SITE_KEY=6LebinEqAAAAAMTRuf4oOLNuDKQtSKisF41--7uP
-RECAPTCHA_SECRET_KEY=6LebinEqAAAAAKjyn8hpBUzIcbJ4XUjpija8de-x
+#RECAPTCHA_SITE_KEY=6LebinEqAAAAAMTRuf4oOLNuDKQtSKisF41--7uP
+#RECAPTCHA_SECRET_KEY=6LebinEqAAAAAKjyn8hpBUzIcbJ4XUjpija8de-x
 
 HCAPTCHA_SITE_KEY=ES_a59227b822854ac48c864713dd5d3a8a
 
