--- a/.htaccess
+++ b/.htaccess
@@ -26,4 +26,6 @@ RewriteRule ^(/)?$ public/index.php [L]
     Header set X-Frame-Options "SAMEORIGIN"
     Header set X-XSS-Protection "1; mode=block"
     Header set Referrer-Policy "no-referrer"
+
+    Header edit Set-Cookie ^(.*)$ $1;HttpOnly;Secure
 </IfModule>
