--- a/.htaccess
+++ b/.htaccess
@@ -13,29 +13,14 @@ RewriteRule ^(/)?$ public/index.php [L]
 <IfModule mod_headers.c>
     Header set Content-Security-Policy "
         default-src 'self';
-        
-        # Allow scripts from trusted sources
-        script-src 'self' https://cdnjs.cloudflare.com https://ajax.googleapis.com https://www.googletagmanager.com https://www.google-analytics.com https://code.jquery.com https://stackpath.bootstrapcdn.com https://cdn.jsdelivr.net;
-        
-        # Allow styles from trusted sources
-        style-src 'self' https://fonts.googleapis.com https://cdnjs.cloudflare.com https://use.fontawesome.com https://stackpath.bootstrapcdn.com https://cdn.jsdelivr.net;
-        
-        # Allow fonts from trusted sources
-        font-src 'self' https://fonts.gstatic.com https://use.fontawesome.com https://cdnjs.cloudflare.com https://cdn.jsdelivr.net;
-        
-        # Allow images from trusted sources and inline images
-        img-src 'self' data: https://www.google-analytics.com https://www.googletagmanager.com https://cdn.example.com https://images.unsplash.com https://cdn.pixabay.com;
-        
-        # Disallow all plugins
+        script-src 'self' https://cdnjs.cloudflare.com https://ajax.googleapis.com;
+        style-src 'self' https://fonts.googleapis.com;
+        font-src 'self' https://fonts.gstatic.com;
+        img-src 'self' data: https://cdn.example.com;
         object-src 'none';
-        
-        # Only allow base URI from the same origin
         base-uri 'self';
-        
-        # Prevent embedding from external sources (Clickjacking protection)
         frame-ancestors 'self';
     "
-
     Header always set Strict-Transport-Security "max-age=31536000; includeSubDomains"
     Header set X-Content-Type-Options "nosniff"
     Header set X-Frame-Options "SAMEORIGIN"
