--- a/composer.json
+++ b/composer.json
@@ -16,17 +16,19 @@
         "laravel/tinker": "^2.8",
         "laravel/ui": "^4.2",
         "mews/captcha": "^3.4",
+        "munafio/chatify": "^1.6",
         "openai-php/client": "^0.10.1",
         "openai-php/laravel": "^0.10.1",
         "staudenmeir/eloquent-eager-limit": "^1.8"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
+        "laravel/breeze": "^1.29",
         "laravel/pint": "^1.0",
         "laravel/sail": "^1.18",
         "mockery/mockery": "^1.4.4",
         "nunomaduro/collision": "^7.0",
-        "phpunit/phpunit": "^10.1",
+        "phpunit/phpunit": "^9.5",
         "spatie/laravel-ignition": "^2.0"
     },
     "autoload": {
