--- a/.env
+++ b/.env
@@ -1,16 +1,18 @@
 APP_NAME=Admin
 APP_ENV=local
 APP_KEY=base64:vw/2RCxKWRyEMJ6PbpM2XdGaFDntnRKIpP7y36sNG6o=
-APP_DEBUG=false
-APP_URL=https://mm-app-v2.com/
+APP_DEBUG=true
+APP_URL=http://localhost:8000
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
+FILESYSTEM_DRIVER=public
+CHATIFY_STORAGE_DISK=public
 
 # DB_CONNECTION=mysql
 # DB_HOST=127.0.0.1
 # DB_PORT=3306
-# DB_DATABASE=mm_db
+# DB_DATABASE=chatify
 # DB_USERNAME=root
 # DB_PASSWORD=
 
@@ -27,21 +29,23 @@ DB_PASSWORD=1Mm_db_root
 HCAPTCHA_SITE_KEY=38d8d378-b714-4902-a74a-c5b84116d0d0
 HCAPTCHA_SECRET_KEY=ES_a2f8befa3285413abefa442d71b0b3d0
 
-
 BROADCAST_DRIVER=log
+BROADCAST_DRIVER=pusher
 CACHE_DRIVER=file
-FILESYSTEM_DISK=local
+FILESYSTEM_DISK=public
 QUEUE_CONNECTION=sync
-SESSION_DRIVER=file
-SESSION_LIFETIME=120
+
+SESSION_LIFETIME=30
+
+SESSION_DRIVER=cookie
 SESSION_SECURE_COOKIE=true
+SESSION_HTTPONLY=true
+SESSION_LIFETIME=30  # 30 minutes
 
 MEMCACHED_HOST=127.0.0.1
-
 REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
-
 
 MAIL_MAILER=smtp
 MAIL_HOST=smtp.gmail.com
@@ -58,9 +62,9 @@ AWS_DEFAULT_REGION=us-east-1
 AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
-PUSHER_APP_ID=895249
-PUSHER_APP_KEY=87e1accde3e2c6013959
-PUSHER_APP_SECRET=5830b9a3c5d0dc914d58
+PUSHER_APP_ID=1895547
+PUSHER_APP_KEY=274f0e4aa19181ad1b99
+PUSHER_APP_SECRET=b15a278a796a50b45d38
 PUSHER_HOST=
 PUSHER_PORT=443
 PUSHER_SCHEME=https
