--- a/.env
+++ b/.env
@@ -1,13 +1,14 @@
 APP_NAME=Admin
 APP_ENV=local
 APP_KEY=base64:vw/2RCxKWRyEMJ6PbpM2XdGaFDntnRKIpP7y36sNG6o=
-APP_DEBUG=true
-APP_URL=http://localhost:8000
+APP_DEBUG=false
+APP_URL=http://mm-app-v2.com/
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 FILESYSTEM_DRIVER=public
 CHATIFY_STORAGE_DISK=public
+
 
 # DB_CONNECTION=mysql
 # DB_HOST=127.0.0.1
@@ -29,20 +30,22 @@ DB_PASSWORD=1Mm_db_root
 HCAPTCHA_SITE_KEY=38d8d378-b714-4902-a74a-c5b84116d0d0
 HCAPTCHA_SECRET_KEY=ES_a2f8befa3285413abefa442d71b0b3d0
 
+
 BROADCAST_DRIVER=log
 BROADCAST_DRIVER=pusher
 CACHE_DRIVER=file
 FILESYSTEM_DISK=public
 QUEUE_CONNECTION=sync
 
-SESSION_LIFETIME=30
+SESSION_LIFETIME=10
 
+SESSION_COOKIE=
 SESSION_DRIVER=cookie
 SESSION_SECURE_COOKIE=true
 SESSION_HTTPONLY=true
-SESSION_LIFETIME=30  # 30 minutes
 
 MEMCACHED_HOST=127.0.0.1
+
 REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
@@ -55,6 +58,11 @@ MAIL_PASSWORD=ymxidkusmsmtmnrx
 MAIL_ENCRYPTION=tls  # or 'ssl' if using port 465
 MAIL_FROM_ADDRESS=nelban.betache18@gmail.com
 MAIL_FROM_NAME="${APP_NAME}"
+
+SINCH_API_KEY=194f652c-8334-4cb0-bab1-2e6dbf73e360
+SINCH_API_SECRET=5QZu2GVkBFJ1Hzju738Fs~xsNE
+SINCH_PHONE_NUMBER=+447418629320
+
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
