--- a/.env
+++ b/.env
@@ -39,7 +39,7 @@ QUEUE_CONNECTION=sync
 
 SESSION_LIFETIME=10
 
-SESSION_COOKIE=
+SESSION_COOKIE=true
 SESSION_DRIVER=cookie
 SESSION_SECURE_COOKIE=true
 SESSION_HTTPONLY=true
