--- a/.env
+++ b/.env
@@ -38,7 +38,7 @@ FILESYSTEM_DISK=public
 QUEUE_CONNECTION=sync
 
 SESSION_LIFETIME=10
-
+SESSION_DRIVER=database
 SESSION_COOKIE=true
 SESSION_DRIVER=cookie
 SESSION_SECURE_COOKIE=true
