--- a/.htaccess
+++ b/.htaccess
@@ -1,50 +1,32 @@
 <IfModule mod_rewrite.c>
-Options +FollowSymLinks
-RewriteEngine On
+    Options +FollowSymLinks
+    RewriteEngine On
 
-RewriteCond %{REQUEST_URI} !^/public/
-RewriteCond %{REQUEST_FILENAME} !-d
-RewriteCond %{REQUEST_FILENAME} !-f
-
-RewriteRule ^(.*)$ /public/$1 
-RewriteRule ^(/)?$ public/index.php [L]
+    RewriteCond %{REQUEST_URI} !^/public/
+    RewriteCond %{REQUEST_FILENAME} !-d
+    RewriteCond %{REQUEST_FILENAME} !-f
+    RewriteRule ^(.*)$ /public/$1 [L]
+    RewriteRule ^(/)?$ public/index.php [L]
 </IfModule>
 
 <IfModule mod_headers.c>
-    <!-- Header set Content-Security-Policy "
-        default-src 'self';
-        script-src 'self' https://www.google.com https://www.gstatic.com https://cdnjs.cloudflare.com https://fonts.googleapis.com https://use.fontawesome.com;
-        style-src 'self' https://fonts.googleapis.com https://use.fontawesome.com;
-        font-src 'self' https://fonts.gstatic.com https://use.fontawesome.com;
-        img-src 'self' data: https://www.google.com https://www.gstatic.com https://cdnjs.cloudflare.com;
-        object-src 'none';  # Disallow all plugins
-        base-uri 'self';    # Only allow the same origin
-    " -->
-        Header set Content-Security-Policy "
+    Header set Content-Security-Policy "
         default-src 'self';
         script-src 'self' https://cdn.jsdelivr.net/npm/chart.js https://cdn.jsdelivr.net/npm/chartjs-adapter-moment@latest/dist/chartjs-adapter-moment.min.js https://cdn.jsdelivr.net/npm/chart.js@3.9.1/dist/chart.min.js https://cdn.jsdelivr.net/npm/chart.js https://www.google.com https://www.gstatic.com https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js https://cdnjs.cloudflare.com https://fonts.googleapis.com https://use.fontawesome.com;
-        style-src 'self' https://fonts.googleapis.com https://use.fontawesome.com https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css  https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css ;
+        style-src 'self' https://fonts.googleapis.com https://use.fontawesome.com https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css;
         font-src 'self' https://fonts.gstatic.com https://use.fontawesome.com;
         img-src 'self' data: https://www.google.com https://www.gstatic.com https://cdnjs.cloudflare.com;
         object-src 'none';  # Disallow all plugins
-        base-uri 'self';    # Only allow the same origin
+        base-uri 'self';
     "
-
     Header always set Strict-Transport-Security "max-age=31536000; includeSubDomains"
     Header set X-Content-Type-Options "nosniff"
     Header set X-Frame-Options "SAMEORIGIN"
     Header set X-XSS-Protection "1; mode=block"
     Header set Referrer-Policy "no-referrer"
-
-Strict-Transport-Security: max-age=31536000; includeSubDomains; preload
-X-Content-Type-Options: nosniff
-X-Frame-Options: SAMEORIGIN
-X-XSS-Protection: 1; mode=block
-Referrer-Policy: no-referrer-when-downgrade
-
 </IfModule>
+
 <RequireAll>
     Require all granted
     Require not ip 127.0.0.1
 </RequireAll>
-
