--- a/public/.htaccess
+++ b/public/.htaccess
@@ -5,10 +5,6 @@
 
     RewriteEngine On
 
-    # Handle Authorization Header
-    RewriteCond %{HTTP:Authorization} .
-    RewriteRule .* - [E=HTTP_AUTHORIZATION:%{HTTP:Authorization}]
-
     # Redirect Trailing Slashes If Not A Folder...
     RewriteCond %{REQUEST_FILENAME} !-d
     RewriteCond %{REQUEST_URI} (.+)/$
@@ -19,8 +15,10 @@
     RewriteCond %{REQUEST_FILENAME} !-f
     RewriteRule ^ index.php [L]
 
-    # Block direct access to index.php files
-    RewriteRule ^index.php$ - [F]
+    # Block direct access to public/index.php and other index.php files
+    RewriteCond %{THE_REQUEST} /index.php
+    RewriteRule ^.*$ / [R=301,L]
+
 </IfModule>
 
 <IfModule mod_headers.c>
@@ -41,7 +39,7 @@
     Header set Referrer-Policy "no-referrer"
 </IfModule>
 
-# Block direct access to any php file including index.php*
+# Block direct access to any PHP file including index.php*
 <Files "index.php*">
     Order Deny,Allow
     Deny from all
