--- a/public/.htaccess
+++ b/public/.htaccess
@@ -5,27 +5,26 @@
 
     RewriteEngine On
 
+    # Prevent Direct Access to index.php (Any version like index.php7, etc.)
+    RewriteCond %{REQUEST_URI} /index.php
+    RewriteRule ^.*$ / [R=301,L]
+
     # Redirect Trailing Slashes If Not A Folder...
     RewriteCond %{REQUEST_FILENAME} !-d
     RewriteCond %{REQUEST_URI} (.+)/$
     RewriteRule ^ %1 [L,R=301]
 
-    # Send Requests To Front Controller (Hides index.php from URL)
+    # Send Requests to Front Controller (index.php)
     RewriteCond %{REQUEST_FILENAME} !-d
     RewriteCond %{REQUEST_FILENAME} !-f
     RewriteRule ^ index.php [L]
-
-    # Block direct access to public/index.php and other index.php files
-    RewriteCond %{THE_REQUEST} /index.php
-    RewriteRule ^.*$ / [R=301,L]
-
 </IfModule>
 
 <IfModule mod_headers.c>
     Header set Content-Security-Policy "
         default-src 'self';
         script-src 'self' https://cdn.jsdelivr.net/npm/chart.js https://cdn.jsdelivr.net/npm/chartjs-adapter-moment@latest/dist/chartjs-adapter-moment.min.js https://cdn.jsdelivr.net/npm/chart.js@3.9.1/dist/chart.min.js https://cdn.jsdelivr.net/npm/chart.js https://www.google.com https://www.gstatic.com https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js https://cdnjs.cloudflare.com https://fonts.googleapis.com https://use.fontawesome.com;
-        style-src 'self' https://fonts.googleapis.com https://use.fontawesome.com https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css  https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css ;
+        style-src 'self' https://fonts.googleapis.com https://use.fontawesome.com https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css ;
         font-src 'self' https://fonts.gstatic.com https://use.fontawesome.com;
         img-src 'self' data: https://www.google.com https://www.gstatic.com https://cdnjs.cloudflare.com;
         object-src 'none';  # Disallow all plugins
@@ -39,8 +38,8 @@
     Header set Referrer-Policy "no-referrer"
 </IfModule>
 
-# Block direct access to any PHP file including index.php*
-<Files "index.php*">
+# Block Access to Any Index.php File (index.php, index.php7, etc.)
+<FilesMatch "index.php.*">
     Order Deny,Allow
     Deny from all
-</Files>
+</FilesMatch>
