--- a/.htaccess
+++ b/.htaccess
@@ -1,24 +1,36 @@
 <IfModule mod_rewrite.c>
-    Options +FollowSymLinks
+    <IfModule mod_negotiation.c>
+        Options -MultiViews -Indexes
+    </IfModule>
+
     RewriteEngine On
 
-    RewriteCond %{REQUEST_URI} !^/public/
+    # Prevent Direct Access to index.php (Any version like index.php7, etc.)
+    RewriteCond %{REQUEST_URI} /index.php
+    RewriteRule ^.*$ / [R=301,L]
+
+    # Redirect Trailing Slashes If Not A Folder...
+    RewriteCond %{REQUEST_FILENAME} !-d
+    RewriteCond %{REQUEST_URI} (.+)/$
+    RewriteRule ^ %1 [L,R=301]
+
+    # Send Requests to Front Controller (index.php)
     RewriteCond %{REQUEST_FILENAME} !-d
     RewriteCond %{REQUEST_FILENAME} !-f
-    RewriteRule ^(.*)$ /public/$1 [L]
-    RewriteRule ^(/)?$ public/index.php [L]
+    RewriteRule ^ index.php [L]
 </IfModule>
 
 <IfModule mod_headers.c>
     Header set Content-Security-Policy "
         default-src 'self';
         script-src 'self' https://cdn.jsdelivr.net/npm/chart.js https://cdn.jsdelivr.net/npm/chartjs-adapter-moment@latest/dist/chartjs-adapter-moment.min.js https://cdn.jsdelivr.net/npm/chart.js@3.9.1/dist/chart.min.js https://cdn.jsdelivr.net/npm/chart.js https://www.google.com https://www.gstatic.com https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js https://cdnjs.cloudflare.com https://fonts.googleapis.com https://use.fontawesome.com;
-        style-src 'self' https://fonts.googleapis.com https://use.fontawesome.com https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css;
+        style-src 'self' https://fonts.googleapis.com https://use.fontawesome.com https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css ;
         font-src 'self' https://fonts.gstatic.com https://use.fontawesome.com;
         img-src 'self' data: https://www.google.com https://www.gstatic.com https://cdnjs.cloudflare.com;
         object-src 'none';  # Disallow all plugins
-        base-uri 'self';
+        base-uri 'self';    # Only allow the same origin
     "
+
     Header always set Strict-Transport-Security "max-age=31536000; includeSubDomains"
     Header set X-Content-Type-Options "nosniff"
     Header set X-Frame-Options "SAMEORIGIN"
@@ -26,16 +38,8 @@
     Header set Referrer-Policy "no-referrer"
 </IfModule>
 
-<RequireAll>
-    Require all granted
-    Require not ip 127.0.0.1
-</RequireAll>
-
-<Files "index.php, index.php7, index.php3, index.php4, index.php5">
+# Block Access to Any Index.php File (index.php, index.php7, etc.)
+<FilesMatch "index.php.*">
     Order Deny,Allow
     Deny from all
-</Files>
-<Files "index.php*">
-    Order Deny,Allow
-    Deny from all
-</Files>
+</FilesMatch>
