--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-APP_NAME=Admin
+APP_NAME=MenstrualMonitoringApp
 APP_ENV=local
 APP_KEY=base64:vw/2RCxKWRyEMJ6PbpM2XdGaFDntnRKIpP7y36sNG6o=
 APP_DEBUG=true
