--- a/.env
+++ b/.env
@@ -38,7 +38,7 @@ FILESYSTEM_DISK=public
 QUEUE_CONNECTION=sync
 
 SESSION_LIFETIME=10
-SESSION_COOKIE=true
+SESSION_COOKIE=${APP_NAME}_session
 SESSION_DRIVER=cookie
 SESSION_SECURE_COOKIE=true
 SESSION_HTTPONLY=true
