--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 APP_NAME=MenstrualMonitoringApp
 APP_ENV=local
 APP_KEY=base64:vw/2RCxKWRyEMJ6PbpM2XdGaFDntnRKIpP7y36sNG6o=
-APP_DEBUG=true
+APP_DEBUG=false
 APP_URL=http://mm-app-v2.com/
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
@@ -38,7 +38,6 @@ FILESYSTEM_DISK=public
 QUEUE_CONNECTION=sync
 
 SESSION_LIFETIME=10
-SESSION_COOKIE=${APP_NAME}_session
 SESSION_DRIVER=cookie
 SESSION_SECURE_COOKIE=true
 SESSION_HTTPONLY=true
