--- a/.htaccess
+++ b/.htaccess
@@ -1,13 +1,6 @@
 <IfModule mod_rewrite.c>
-Options +FollowSymLinks
-RewriteEngine On
-
-RewriteCond %{REQUEST_URI} !^/public/
-RewriteCond %{REQUEST_FILENAME} !-d
-RewriteCond %{REQUEST_FILENAME} !-f
-
-RewriteRule ^(.*)$ /public/$1 
-RewriteRule ^(/)?$ public/index.php [L]
+    RewriteEngine On
+    RewriteRule ^(.*)$ public/$1 [L]
 </IfModule>
 
 <IfModule mod_headers.c>
