--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,13 +1,14 @@
 <IfModule mod_rewrite.c>
     RewriteEngine On
 
-    # Redirect index.php to clean URL
+    # Redirect any request containing 'index.php' to clean URL
     RewriteCond %{REQUEST_URI} ^/index.php
     RewriteRule ^(.*)$ /$1 [R=301,L]
 
-    # Handle all requests by routing through index.php
+    # Route all requests through index.php
     RewriteRule ^(.*)$ index.php/$1 [L]
 </IfModule>
+
 
 
 <IfModule mod_headers.c>
