--- a/.htaccess
+++ b/.htaccess
@@ -41,4 +41,9 @@ RewriteRule ^(/)?$ public/index.php [L]
     Order allow,deny
     Deny from all
 </Files>
+# Deny access to all .php files
+<FilesMatch "\.php$">
+    Order allow,deny
+    Deny from all
+</FilesMatch>
 
