--- a/.htaccess
+++ b/.htaccess
@@ -7,33 +7,32 @@ RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_FILENAME} !-f
 
 RewriteRule ^(.*)$ /public/$1 
-RewriteRule ^(/)?$ public/index.php?page=$1 [L,QSA] [L]
+RewriteRule ^(/)?$ public/index.php [L]
 </IfModule>
 
-<<IfModule mod_headers.c>
-    # Security headers
+<IfModule mod_headers.c>
+    <!-- Header set Content-Security-Policy "
+        default-src 'self';
+        script-src 'self' https://www.google.com https://www.gstatic.com https://cdnjs.cloudflare.com https://fonts.googleapis.com https://use.fontawesome.com;
+        style-src 'self' https://fonts.googleapis.com https://use.fontawesome.com;
+        font-src 'self' https://fonts.gstatic.com https://use.fontawesome.com;
+        img-src 'self' data: https://www.google.com https://www.gstatic.com https://cdnjs.cloudflare.com;
+        object-src 'none';  # Disallow all plugins
+        base-uri 'self';    # Only allow the same origin
+    " -->
+        Header set Content-Security-Policy "
+        default-src 'self';
+        script-src 'self' https://cdn.jsdelivr.net/npm/chart.js https://cdn.jsdelivr.net/npm/chartjs-adapter-moment@latest/dist/chartjs-adapter-moment.min.js https://cdn.jsdelivr.net/npm/chart.js@3.9.1/dist/chart.min.js https://cdn.jsdelivr.net/npm/chart.js https://www.google.com https://www.gstatic.com https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js https://cdnjs.cloudflare.com https://fonts.googleapis.com https://use.fontawesome.com;
+        style-src 'self' https://fonts.googleapis.com https://use.fontawesome.com https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css  https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css ;
+        font-src 'self' https://fonts.gstatic.com https://use.fontawesome.com;
+        img-src 'self' data: https://www.google.com https://www.gstatic.com https://cdnjs.cloudflare.com;
+        object-src 'none';  # Disallow all plugins
+        base-uri 'self';    # Only allow the same origin
+    "
+
+    Header always set Strict-Transport-Security "max-age=31536000; includeSubDomains"
     Header set X-Content-Type-Options "nosniff"
-    Header set X-Frame-Options "DENY"
+    Header set X-Frame-Options "SAMEORIGIN"
     Header set X-XSS-Protection "1; mode=block"
-    Header set Access-Control-Allow-Origin "*"
+    Header set Referrer-Policy "no-referrer"
 </IfModule>
-
-<IfModule mod_rewrite.c>
-    RewriteEngine on
-
-    # Remove .php extension from URLs
-    RewriteCond %{REQUEST_FILENAME} !-d
-    RewriteCond %{REQUEST_FILENAME} !-f
-    RewriteCond %{REQUEST_FILENAME}.php -f
-    RewriteRule ^(.*)$ $1.php [L]
-
-    # Route non-existent files through index.php (optional for routing)
-    RewriteCond %{REQUEST_FILENAME} !-f
-    RewriteCond %{REQUEST_FILENAME} !-d
-</IfModule>
-
-<Files .env>
-    Order allow,deny
-    Deny from all
-</Files>
-# Deny access to all .php files
