--- a/.htaccess
+++ b/.htaccess
@@ -3,7 +3,7 @@ Options +FollowSymLinks
 RewriteEngine On
 
 RewriteCond %{REQUEST_URI} !^/public/ 
-
+RewriteCond %{REQUEST_FILENAME} !index\.php[0-9]+$
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_FILENAME} !-f
 
