--- a/.env
+++ b/.env
@@ -9,13 +9,12 @@ LOG_LEVEL=debug
 FILESYSTEM_DRIVER=public
 CHATIFY_STORAGE_DISK=public
 
-
-# DB_CONNECTION=mysql
-# DB_HOST=127.0.0.1
-# DB_PORT=3306
-# DB_DATABASE=chatify
-# DB_USERNAME=root
-# DB_PASSWORD=
+DB_CONNECTION=mysql
+DB_HOST=127.0.0.1
+DB_PORT=3306
+DB_DATABASE=chatify
+DB_USERNAME=root
+DB_PASSWORD=
 
 #DB_CONNECTION=mysql
 #DB_HOST=127.0.0.1
