--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 APP_NAME=MenstrualMonitoringApp
 APP_ENV=local
 APP_KEY=base64:vw/2RCxKWRyEMJ6PbpM2XdGaFDntnRKIpP7y36sNG6o=
-APP_DEBUG=false
+APP_DEBUG=true
 APP_URL=http://mm-app-v2.com/
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
@@ -9,19 +9,20 @@ LOG_LEVEL=debug
 FILESYSTEM_DRIVER=public
 CHATIFY_STORAGE_DISK=public
 
-#DB_CONNECTION=mysql
-#DB_HOST=127.0.0.1
-#DB_PORT=3306
-#DB_DATABASE=chatify
-#DB_USERNAME=root
-#DB_PASSWORD=
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=u510162695_mm_db
-DB_USERNAME=u510162695_mm_db_root
-DB_PASSWORD=1Mm_db_root
+DB_DATABASE=chatify
+DB_USERNAME=root
+DB_PASSWORD=
+
+# DB_CONNECTION=mysql
+# DB_HOST=127.0.0.1
+# DB_PORT=3306
+# DB_DATABASE=u510162695_mm_db
+# DB_USERNAME=u510162695_mm_db_root
+# DB_PASSWORD=1Mm_db_root
 
 #RECAPTCHA_SITE_KEY=6LfihnEqAAAAAIet5IRVAvaodeObJryzsQPqLAMk
 #RECAPTCHA_SECRET_KEY=6LfihnEqAAAAAHc7vvV02T-Hw43DtRfNwQb86LyU
@@ -36,12 +37,17 @@ CACHE_DRIVER=file
 FILESYSTEM_DISK=public
 QUEUE_CONNECTION=sync
 
+SESSION_DRIVER=file
 SESSION_LIFETIME=5
 SESSION_COOKIE=${APP_NAME}_session
 SESSION_DRIVER=cookie
 SESSION_SECURE_COOKIE=true
 SESSION_HTTPONLY=true
-SESSION_DRIVER=file
+
+SINCH_APP_KEY=2bb990ee-6a63-47e2-8a67-c5f1c3d9842f
+SINCH_APP_SECRET=bMKNQDyLaBFTxFF5AOKH8jl8i.
+SINCH_SERVICE_PLAN_ID=91b786ca6149492d9693d74d06381a1d
+SINCH_SENDER_ID=your_sender_id
 
 MEMCACHED_HOST=127.0.0.1
 
@@ -61,7 +67,6 @@ MAIL_FROM_NAME="${APP_NAME}"
 SINCH_API_KEY=194f652c-8334-4cb0-bab1-2e6dbf73e360
 SINCH_API_SECRET=5QZu2GVkBFJ1Hzju738Fs~xsNE
 SINCH_PHONE_NUMBER=+447418629320
-
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
