--- a/.htaccess
+++ b/.htaccess
@@ -6,11 +6,11 @@ RewriteCond %{REQUEST_URI} !^/public/
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !index\.php[0-9]+$
+RewriteCond %{REQUEST_FILENAME}.php -f
 
 RewriteRule ^(.*)$ /public/$1 
 RewriteRule ^(/)?$ public/index.php [L]
 </IfModule>
-
 
 <IfModule mod_headers.c>
     <!-- Header set Content-Security-Policy "
@@ -32,9 +32,10 @@ RewriteRule ^(/)?$ public/index.php [L]
         base-uri 'self';    # Only allow the same origin
     "
 
-    Header always set Strict-Transport-Security "max-age=31536000; includeSubDomains"
-    Header set X-Content-Type-Options "nosniff"
-    Header set X-Frame-Options "SAMEORIGIN"
-    Header set X-XSS-Protection "1; mode=block"
-    Header set Referrer-Policy "no-referrer"
+        Header always set Strict-Transport-Security "max-age=31536000; includeSubDomains"
+        Header set X-Content-Type-Options "nosniff"
+        Header set X-Frame-Options "SAMEORIGIN"
+        Header set X-XSS-Protection "1; mode=block"
+        Header set Referrer-Policy "no-referrer"
+        Header set Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline'; style-src 'self' 'unsafe-inline'; img-src 'self' data:; font-src 'self'; connect-src 'self'; frame-ancestors 'none'; object-src 'none'; form-action 'self';"
 </IfModule>
