--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 APP_NAME=MenstrualMonitoringApp
 APP_ENV=local
 APP_KEY=base64:vw/2RCxKWRyEMJ6PbpM2XdGaFDntnRKIpP7y36sNG6o=
-APP_DEBUG=true
+APP_DEBUG=false
 APP_URL=http://mm-app-v2.com/
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
@@ -24,12 +24,8 @@ DB_DATABASE=u510162695_mm_db
 DB_USERNAME=u510162695_mm_db_root
 DB_PASSWORD=1Mm_db_root
 
-#RECAPTCHA_SITE_KEY=6LfihnEqAAAAAIet5IRVAvaodeObJryzsQPqLAMk
-#RECAPTCHA_SECRET_KEY=6LfihnEqAAAAAHc7vvV02T-Hw43DtRfNwQb86LyU
-
 HCAPTCHA_SITE_KEY=38d8d378-b714-4902-a74a-c5b84116d0d0
 HCAPTCHA_SECRET_KEY=ES_a2f8befa3285413abefa442d71b0b3d0
-
 
 BROADCAST_DRIVER=log
 BROADCAST_DRIVER=pusher
