--- a/.env
+++ b/.env
@@ -54,8 +54,8 @@ REDIS_PORT=6379
 MAIL_MAILER=smtp
 MAIL_HOST=smtp.gmail.com
 MAIL_PORT=587  # or 465 if you prefer SSL
-MAIL_USERNAME=nelbanbetache@gmail.com
-MAIL_PASSWORD=radkgsqjdcnjdpto
+MAIL_USERNAME=nelban.betache18@gmail.com
+MAIL_PASSWORD=emtzcqfohafodise
 MAIL_ENCRYPTION=tls  # or 'ssl' if using port 465
 MAIL_FROM_ADDRESS=nelbanbetache@gmail.com
 MAIL_FROM_NAME="${APP_NAME}"
